[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-claw"
version = "0.3.1"
description = "Trust-First Agent Framework — behavioral trust, cryptographic provenance, semantic firewall. The trust kernel that agentic AI is missing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jasper van de Meent", email = "info@humotica.com" },
    { name = "Root AI", email = "info@humotica.com" },
]
keywords = [
    "ai", "agents", "trust", "provenance", "security",
    "tibet", "jis", "langchain", "mcp", "orchestrator",
    "audit", "compliance", "firewall", "owasp", "nis2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain>=0.2.0", "langchain-core>=0.2.0"]
ecosystem = [
    "tibet-core>=0.2.0",
    "tibet-claw>=0.2.0",
    "jis-core>=0.2.0",
    "inject-bender>=0.3.0",
]
all = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "tibet-core>=0.2.0",
    "tibet-claw>=0.2.0",
    "jis-core>=0.2.0",
    "inject-bender>=0.3.0",
]

[project.urls]
Homepage = "https://humotica.com"
Documentation = "https://github.com/jaspertvdm/tibetclaw"
Repository = "https://github.com/jaspertvdm/tibetclaw"
"IETF TIBET" = "https://datatracker.ietf.org/doc/draft-vandemeent-tibet-provenance/"
"IETF JIS" = "https://datatracker.ietf.org/doc/draft-vandemeent-jis-identity/"
"PyPI Ecosystem" = "https://pypi.org/user/jaspertvdm/"

[tool.hatch.build.targets.wheel]
packages = ["tibetclaw"]

[project.scripts]
tibetclaw = "tibetclaw.cli:main"
